SCRUM-56 Update Plan
